--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.19.2)
 
 add_library(ast
     modal_to_qeuf.cpp
-    modal_to_prop.cpp
+    modal_to_euf.cpp
     strategy.cpp
 )
 
