--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.19.2)
 add_library(ast
     modal_to_qeuf.cpp
     modal_to_euf.cpp
+    lazy_up.cpp
     strategy.cpp
 )
 
