Uses new syntax (+ multi modal support)

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -7,6 +7,6 @@ add_executable(cli
 target_link_libraries(cli PRIVATE ast)
 #target_link_libraries(cli PRIVATE utils)
 
-include_directories("../ast")
+include_directories("../strategies")
 include_directories("../utils")
 target_link_libraries(cli PRIVATE ${Z3_LIBRARIES})
