--- a/src/strategies/CMakeLists.txt
+++ b/src/strategies/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.18.4)
 
 add_library(ast
-    modal_to_qeuf.cpp
+    standard_translation.cpp
     modal_to_euf.cpp
     lazy_up.cpp
     strategy.cpp
     syntax_tree.cpp
-)
+iterative_deepening.cpp iterative_deepening.h)
 
 target_link_libraries(ast utils)
 include_directories("../utils")
