--- a/src/strategies/CMakeLists.txt
+++ b/src/strategies/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library(ast
     lazy_up.cpp
     strategy.cpp
     syntax_tree.cpp
-iterative_deepening.cpp iterative_deepening.h)
+iterative_deepening_quant.cpp iterative_deepening_quant.h)
 
 target_link_libraries(ast utils)
 include_directories("../utils")
