--- a/src/strategies/CMakeLists.txt
+++ b/src/strategies/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(ast
     lazy_up.cpp
     strategy.cpp
     syntax_tree.cpp
+    modal_tree.cpp
     iterative_deepening_quant.cpp
     iterative_deepening_quant.h
     iterative_deepening_unrolled.cpp
